--- a/on.css
+++ b/on.css
@@ -3,8 +3,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
+    background-color: #333;
 }
 
 li {
@@ -13,22 +12,27 @@ li {
 
 li a {
     display: block;
-    color: #666;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
+li a:hover {
+    background-color: #111;
+}
 
 li a:hover:not(.active) {
-   
+    background-color: #ddd;
     color: red;
 }
 
 li a.active {
-      background-color: #4CAF50;
-      color: white;
+    color: white;
+    background-color: #4CAF50;
 }
 
-#d{
-    background-color: 
+img {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
 }
