--- a/on.css
+++ b/on.css
@@ -58,3 +58,37 @@ table, th, td{
     position: fixed;
     width: 100%;
 }
+
+.dv{
+    background-color:black;
+    color:white;
+    clear:both;
+    text-align:center;
+   padding:5px; 
+}
+#wr{
+    color: white;
+}
+#wr:hover:not(.active){
+    color: red;
+}
+
+#header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+#nav {
+    line-height:30px;
+    background-color:#eeeeee;
+    height:300px;
+    width:100px;
+    float:left;
+    padding:5px;          
+}
+#section {
+    width:350px;
+    float:left;
+    padding:10px;        
+}
