--- a/on.css
+++ b/on.css
@@ -194,11 +194,9 @@ input[type="submit"]:hover {
 
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
-=======
-
+}
 .bulat{
-border-radius:100em;
+ border-radius:100em;
 width:160px;
-height:160px;
->>>>>>> e1391cd7b4626618f6e81450bdf8afb30759f4c9
+height:160px;   
 }
